--- a/index.html
+++ b/index.html
@@ -24,18 +24,23 @@
     table {
       width: 100%;
       border-collapse: collapse;
+      table-layout: fixed;
     }
     th, td {
       border: 1px solid #ccc;
       text-align: center;
       padding: 8px;
+      word-break: keep-all;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
     }
     th {
       background-color: #eaeaea;
     }
-    td.name {
-      background-color: #fff8dc;
-      cursor: text;
+    .active {
+      background-color: #999 !important;
+      color: white;
     }
     .general {
       background-color: #4CAF50;
@@ -67,10 +72,10 @@
     <thead>
       <tr id="nameRow">
         <th>순서</th>
-        <th contenteditable="true" class="name">이름</th>
-        <th contenteditable="true" class="name">이름</th>
-        <th contenteditable="true" class="name">이름</th>
-        <th contenteditable="true" class="name">이름</th>
+        <th class="name">경희</th>
+        <th class="name">안나</th>
+        <th class="name">예림</th>
+        <th class="name">키르케</th>
       </tr>
     </thead>
     <tbody id="tableBody"></tbody>
@@ -78,9 +83,19 @@
 
   <script>
     const tableBody = document.getElementById("tableBody");
-    const maxRows = 50;
     const nameRow = document.getElementById("nameRow");
+    const maxRows = 50;
     const scoreMap = { general: 1, designated: 1, reserved: 0.5 };
+    const activeTeachers = [false, false, false, false];
+
+    nameRow.querySelectorAll(".name").forEach((cell, idx) => {
+      cell.style.cursor = "pointer";
+      cell.addEventListener("click", () => {
+        activeTeachers[idx] = !activeTeachers[idx];
+        cell.classList.toggle("active", activeTeachers[idx]);
+        updateScores();
+      });
+    });
 
     function createTable(rows = 10) {
       tableBody.innerHTML = "";
@@ -101,6 +116,14 @@
     }
 
     function toggleType(cell) {
+      const row = parseInt(cell.dataset.row);
+      const col = parseInt(cell.dataset.col);
+      for (let i = 0; i < 4; i++) {
+        if (i !== col) {
+          const other = tableBody.rows[row].cells[i + 1];
+          if (other.className !== "") return;
+        }
+      }
       const states = ["", "general", "designated", "reserved"];
       const current = cell.className;
       const next = states[(states.indexOf(current) + 1) % states.length];
@@ -115,27 +138,31 @@
       for (let row of tableBody.rows) {
         for (let i = 0; i < 4; i++) {
           const cls = row.cells[i + 1].className;
-          if (scoreMap[cls]) scores[i] += scoreMap[cls];
+          if (scoreMap[cls] && activeTeachers[i]) scores[i] += scoreMap[cls];
         }
       }
       for (let i = 1; i <= 4; i++) {
-        const name = nameRow.cells[i].innerText.split("(")[0].trim() || "이름";
-        nameRow.cells[i].innerText = `${name} (${scores[i - 1]}점)`;
+        const name = nameRow.cells[i].textContent.split("(")[0].trim();
+        nameRow.cells[i].textContent = `${name} (${scores[i - 1]}점)`;
       }
       updateNextBlink(scores);
     }
 
     function updateNextBlink(scores) {
-      // 모든 깜빡임 제거
       for (let row of tableBody.rows) {
-        row.cells[0].classList.remove("blink");
+        for (let i = 1; i <= 4; i++) {
+          row.cells[i].classList.remove("blink");
+        }
       }
-      const nextIndex = scores.indexOf(Math.min(...scores));
+      const queue = scores.map((score, idx) => ({ idx, score })).filter(t => activeTeachers[t.idx]);
+      queue.sort((a, b) => a.score - b.score);
       for (let row of tableBody.rows) {
-        const cell = row.cells[nextIndex + 1];
-        if (cell.className === "") {
-          row.cells[0].classList.add("blink");
-          break;
+        for (let q of queue) {
+          const targetCell = row.cells[q.idx + 1];
+          if (targetCell.className === "") {
+            targetCell.classList.add("blink");
+            return;
+          }
         }
       }
     }
