--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <th>순서</th>
         <th class="name">경희</th>
         <th class="name">안나</th>
-        <th class="name">예림</th>
+        <th class="name">카라</th>
         <th class="name">키르케</th>
       </tr>
     </thead>
