--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <th>순서</th>
         <th class="name">경희</th>
         <th class="name">안나</th>
-        <th class="name">카라</th>
+        <th class="name">예림</th>
         <th class="name">키르케</th>
       </tr>
     </thead>
@@ -87,6 +87,7 @@
     const maxRows = 50;
     const scoreMap = { general: 1, designated: 1, reserved: 0.5 };
     const activeTeachers = [false, false, false, false];
+    let currentBlinkCell = null;
 
     nameRow.querySelectorAll(".name").forEach((cell, idx) => {
       cell.style.cursor = "pointer";
@@ -98,8 +99,8 @@
     });
 
     function createTable(rows = 10) {
-      tableBody.innerHTML = "";
-      for (let i = 0; i < rows; i++) {
+      const existingRows = tableBody.rows.length;
+      for (let i = existingRows; i < rows; i++) {
         const tr = document.createElement("tr");
         const th = document.createElement("th");
         th.textContent = i + 1;
@@ -108,7 +109,12 @@
           const td = document.createElement("td");
           td.dataset.row = i;
           td.dataset.col = j;
-          td.addEventListener("click", () => toggleType(td));
+          td.addEventListener("click", () => {
+            if (td.classList.contains("blink")) {
+              td.classList.remove("blink");
+            }
+            toggleType(td);
+          });
           tr.appendChild(td);
         }
         tableBody.appendChild(tr);
@@ -149,18 +155,16 @@
     }
 
     function updateNextBlink(scores) {
-      for (let row of tableBody.rows) {
-        for (let i = 1; i <= 4; i++) {
-          row.cells[i].classList.remove("blink");
-        }
-      }
+      if (currentBlinkCell) currentBlinkCell.classList.remove("blink");
+
       const queue = scores.map((score, idx) => ({ idx, score })).filter(t => activeTeachers[t.idx]);
       queue.sort((a, b) => a.score - b.score);
-      for (let row of tableBody.rows) {
-        for (let q of queue) {
+      for (let q of queue) {
+        for (let row of tableBody.rows) {
           const targetCell = row.cells[q.idx + 1];
           if (targetCell.className === "") {
             targetCell.classList.add("blink");
+            currentBlinkCell = targetCell;
             return;
           }
         }
