--- a/index.html
+++ b/index.html
@@ -112,8 +112,11 @@
           td.addEventListener("click", () => {
             if (td.classList.contains("blink")) {
               td.classList.remove("blink");
+              currentBlinkCell = null;
+              toggleType(td);
+            } else if (!td.classList.contains("blink") && td.className !== "") {
+              toggleType(td);
             }
-            toggleType(td);
           });
           tr.appendChild(td);
         }
